# SubtitleGenerator

./: .gitignore  CMakeLists.txt
FileConverter/: CMakeLists.txt  WavConverter.cpp  WavConverter.h
